--- a/turntablePulley/platformio.ini
+++ b/turntablePulley/platformio.ini
@@ -12,6 +12,12 @@
 platform = espressif8266
 board = esp12e
 framework = arduino
+monitor_speed = 115200
+upload_speed = 921600
+;upload_protocol = espota
+;upload_port = 192.168.1.182
+monitor_rts = 0
+monitor_dtr = 0
 lib_deps = 
 	waspinator/AccelStepper@^1.64
 	ayushsharma82/WebSerial@^1.4.0
