--- a/turntablePulley/platformio.ini
+++ b/turntablePulley/platformio.ini
@@ -14,10 +14,11 @@ board = esp12e
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
-; upload_protocol = espota
-; upload_port = 192.168.1.135
+upload_protocol = espota
+upload_port = 192.168.1.135
 monitor_rts = 0
 monitor_dtr = 0
+board_build.f_cpu: 160000000L
 lib_deps = 
 	waspinator/AccelStepper@^1.64
 	ayushsharma82/WebSerial@^1.4.0
