seeed stepper tuning
okay, kind of slow and the stepper gets REAL hot. might be asking a little too much. should see with real lid how hot it gets

--- a/turntablePulley/platformio.ini
+++ b/turntablePulley/platformio.ini
@@ -15,7 +15,8 @@ framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
 upload_protocol = espota
-upload_port = 192.168.1.135
+;upload_port = 192.168.1.135
+upload_port = 192.168.1.151
 monitor_rts = 0
 monitor_dtr = 0
 board_build.f_cpu: 160000000L
